objects/ssot__LearnerProgramRqmtProgress__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationNumber__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationUnit__c</fullName>
        <label>Duration Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Learner Program Requirement Progress Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearnerProgramRequirementId__c</fullName>
        <label>Learner Program Requirement</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningOutcomeItemId__c</fullName>
        <label>Learning Outcome Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819882757_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerProgramRqmtProgress_LearningO_rel</label>
        <referenceTo>ssot__LearningOutcomeItem__dlm</referenceTo>
        <relationshipLabel>LearnerProgramRqmtProgress_LearningO_rel</relationshipLabel>
        <relationshipName>rel_1719819882757_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719820318561_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerProgramRqmtProgress_LearnerPr_rel</label>
        <referenceTo>ssot__LearnerProgramRequirement__dlm</referenceTo>
        <relationshipLabel>LearnerProgramRqmtProgress_LearnerPr_rel</relationshipLabel>
        <relationshipName>rel_1719820318561_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>